// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders button for dead cell 1`] = `
.emotion-0 {
  width: 15px;
  height: 15px;
  border: 1px solid #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  text-align: center;
  box-sizing: border-box;
  cursor: pointer;
  text-align: center;
  vertical-align: top;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 2px;
  padding-bottom: 0px;
  font-size: 10px;
  line-height: 1;
  -webkit-transition: -webkit-transform 1s,background-color 1s;
  -webkit-transition: transform 1s,background-color 1s;
  transition: transform 1s,background-color 1s;
  background-color: #fff;
}

<button
  className="emotion-0"
  onClick={[Function]}
/>
`;

exports[`Cell renders button for live cell 1`] = `
.emotion-0 {
  width: 15px;
  height: 15px;
  border: 1px solid #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  text-align: center;
  box-sizing: border-box;
  cursor: pointer;
  text-align: center;
  vertical-align: top;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 2px;
  padding-bottom: 0px;
  font-size: 10px;
  line-height: 1;
  -webkit-transition: -webkit-transform 1s,background-color 1s;
  -webkit-transition: transform 1s,background-color 1s;
  transition: transform 1s,background-color 1s;
  background-color: #00ff00;
  -webkit-transform: rotate(360deg);
  -ms-transform: rotate(360deg);
  transform: rotate(360deg);
}

<button
  className="emotion-0"
  onClick={[Function]}
>
   
</button>
`;
